# miami-university-cse-notes

./: .gitignore  CMakeLists.txt  LICENSE.html  LICENSE.md  README.md  README.rst
CSE 271/: README.md
CSE 271 (Object-Oriented Programming)/: README.md
CSE 278 (Systems I - Introduction to Systems Programming)/: CMakeLists.txt  README.rst
CSE 278 (Systems I - Introduction to Systems Programming)/Classes/: Integer.cpp  Integer.h  IntegerAggregate.cpp  IntegerAggregate.h  main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Files/: main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Memory Allocation/: NoArgClass.cpp  NoArgClass.h  OneArgClass.cpp  OneArgClass.h  TwoArgClass.cpp  TwoArgClass.h  main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Misc/: main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Number Representation/: main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Overloading Operators/: Integer.cpp  Integer.h  Makefile  main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/Polymorphism/: Rectangle.cpp  Rectangle.h  SpecialRectangle.cpp  SpecialRectangle.h  Square.cpp  Square.h  main.cpp
CSE 278 (Systems I - Introduction to Systems Programming)/SQL/: main.sql
CSE 278 (Systems I - Introduction to Systems Programming)/Strings/: main.cpp
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/: README.md
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/C++ Data Structures/: unordered_map.cpp  vector.cpp
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Console IO/: main.c
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/IPC (Interprocess Communication)/: pipes.c  shared-memory.c
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Linux User Management/: README.md
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Multithreading/: Implicit Multithreading.md  JavaThreading.java  JavaThreadingExecutor.java  JavaThreadingForkJoinPool.java  OpenMP.c  pthread.c  thread.cpp
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Multithreading/Critical Section/: MutualExclusionAlgorithm.java  PetersonsAlgorithm.java  PetersonsAlgorithmTest.java
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Networking/: client.c  server.c
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Parallelism/: Task Parallelism.c
CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Simple Shell/: command-piping.c  main.c
CSE 627 (Machine Learning)/: 02. Chapter 2.md  README.md
